--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Adventure stories'
 - !lcc 'PS'
 - !lcsh 'Europe -- Fiction'
+- GITenberg
 title: 'Trusia: A Princess of Krovitch'
 url: http://www.gutenberg.org/ebooks/31518
